# Bro-CLI

./: .gitignore  README.md  lite.html  pyproject.toml  test_grounding.py  test_grounding2.py  test_grounding3.py  test_planner.py
.github/workflows/: publish.yml
bro_cli/: __init__.py  config.py  gemini_client.py  main.py
bro_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bro_cli/engine/: manager.py  memory.py  planner.py  reflection.py  worker.py
bro_cli/providers/: base.py  gemini.py  groq.py
bro_cli/ui/: terminal.py
bro_cli/utils/: shell.py
tests/: test_agentic.py  test_cli.py  test_config.py
